FIX: Added custom JS to resized vh units on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -24,7 +24,9 @@ code {
 
 html {
   width: 100%;
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
   height: -webkit-fill-available;
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 canvas {
