--- a/src/pages/Work/components/Project/Project.scss
+++ b/src/pages/Work/components/Project/Project.scss
@@ -3,7 +3,10 @@
   // min-height: 100vh;
   // max-width: 100vw;
   // max-height: 100vh;
-  height: -webkit-fill-available;
+  // height: -webkit-fill-available;
+  // height: calc(var(--vh, 1vh));
+  height: var(--vh, 100vh);
+
   position: relative;
   // overflow: visible;
   scroll-snap-align: start;
